2015-12-08  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2356: Update NEWS
	* NEWS: Updated with IcedTea 2.x history
	as opposed to partial details of the 2.0.0
	release. Upstream details for OpenJDK 8 already
	updated as part of bump to u60.

2015-01-06  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2066: Unset OS before running OpenJDK build
	* Makefile.am:
	(ICEDTEA_UNSET): Introduce variable to
	store unsetting of environment variables.
	(ICEDTEA_ENV): Move JAVA_HOME and JDK_HOME to
	ICEDTEA_UNSET.
	(icedtea): Unset variables prior to running
	$(MAKE).
	(icedtea-debug): Likewise.
	(icedtea-boot): Likewise.
	* NEWS: Updated.

2015-12-07  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS: Add G564746 to PR2691 distcc bug.

2015-12-07  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1377: Forwardport javac detection / usability
	test from IcedTea 2.x
	* NEWS: Updated.

2012-03-20  Andrew John Hughes  <ahughes@redhat.com>

	PR1377: Forwardport javac detection / usability
	test from IcedTea 2.x
	* acinclude.m4:
	(IT_FIND_COMPILER): Define only once and
	rename from IT_FIND_JAVA_COMPILER. Move
	default value for javac into its own macro.
	(IT_FIND_ECJ): Use same form as detection
	for java, javah, jar and rmic.
	(IT_FIND_JAVAC): Likewise.
	(IT_FIND_JAVA): Define only once.
	(IT_CHECK_JAVA_AND_JAVAC_WORK): New macro to check
	java and javac actually work together to compile code
	before running other tests such as the dtdtype one.
	(IT_CHECK_FOR_CLASS): Depend on java/javac working.
	* configure.ac: Invoke IT_FIND_COMPILER rather than
	IT_FIND_JAVA_COMPILER.

2015-12-06  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(CORBA_CHANGESET): Update to icedtea-3.0.0pre07 tag.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(NASHORN_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.